[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project]
name = "v2-tutorial"
version = "0.0.0"
description = "Flyte v2 hello world examples"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "flyte>=2.0.0b14",
  "polyglot-hello>=0.1.3",
]

[tool.uv]
# This is an app-style repo; we don't need to build/publish a wheel.
package = false


